# ddd-fastapi-kafka

./: .env  .gitignore  Dockerfile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py
