[tool.poetry]
name = "realtimechat"
version = "0.1.0"
description = ""
authors = ["cringecode <tyoma.dar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
motor = "^3.6.0"
uvicorn = {extras = ["all"], version = "^0.32.1"}
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
